Tried to a Texture class
It worked but the texcoord are a little messed up. gotta check that on the VertexBufferLayout