@@ -22,21 +22,21 @@ public class VertexBufferLayout {
 
         switch(type) {
             case 0: // Float
-                m_Elements.get(m_Elements.size() - 1).type = GL_FLOAT;
-                m_Elements.get(m_Elements.size() - 1).count = count;
-                m_Elements.get(m_Elements.size() - 1).normalized = false;
+                m_Elements.getLast().type = GL_FLOAT;
+                m_Elements.getLast().count = count;
+                m_Elements.getLast().normalized = false;
                 m_Stride += VertexBufferElement.GetSizeOfType(GL_FLOAT) * count;
                 break;
             case 1: // Int
-                m_Elements.get(m_Elements.size() - 1).type = GL_UNSIGNED_INT;
-                m_Elements.get(m_Elements.size() - 1).count = count;
-                m_Elements.get(m_Elements.size() - 1).normalized = false;
+                m_Elements.getLast().type = GL_UNSIGNED_INT;
+                m_Elements.getLast().count = count;
+                m_Elements.getLast().normalized = false;
                 m_Stride += VertexBufferElement.GetSizeOfType(GL_UNSIGNED_INT) * count;
                 break;
             case 2: // Byte
-                m_Elements.get(m_Elements.size() - 1).type = GL_UNSIGNED_BYTE;
-                m_Elements.get(m_Elements.size() - 1).count = count;
-                m_Elements.get(m_Elements.size() - 1).normalized = true;
+                m_Elements.getLast().type = GL_UNSIGNED_BYTE;
+                m_Elements.getLast().count = count;
+                m_Elements.getLast().normalized = true;
                 m_Stride += VertexBufferElement.GetSizeOfType(GL_UNSIGNED_BYTE) * count;
                 break;
         }
